{{$NEXT}}

1.302057  2016-09-18 12:12:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Doc fixes
    - Win32 color support in Test::Builder::Tester
    - Support v-strings in is_deeply
    - A streamed subtest run inside a buffered subtest will be automatically
      converted to a buffered subtest. Otherwise the output from inside the
      subtest is lost entirely. (#721)

1.302056  2016-09-12 09:03:49-07:00 America/Los_Angeles

    - Minor typo fix
    - No logic chnges since last trial

1.302055  2016-08-30 12:13:32-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix special case of ok line ending in \
    - Improve a test that captures STDERR/STDOUT (Thanks HAARG)

1.302054  2016-08-20 16:21:44-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Allow '#' and '\n' in ok names

1.302053  2016-08-17 21:22:55-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix skip_all in require in intercept (#696)
    - Documentation of what is better in Test2 (#663)
    - Document Test::Builder::Tester plan limitations
    - Document limitations in is_deeply (#595)
    - Better documentation of done_testing purpose (#151)
    - Make ctx->send_event detect termination events (#707)

1.302052  2016-08-13 14:34:07-07:00 America/Los_Angeles

    - No Changes from last trial

1.302051  2016-08-11 20:26:22-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix setting hub when getting context

1.302050  2016-08-10 22:12:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add contact info to main doc and readme

1.302049  2016-07-28 07:03:31-07:00 America/Los_Angeles

    - No Changes from last trial

1.302048  2016-07-27 07:42:14-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add 'active' attribute to hub

1.302047  2016-07-22 22:36:29-07:00 America/Los_Angeles

    - No Changes from last trial

1.302046  2016-07-19 06:58:43-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Restore traditional note/diag return values (#694)

1.302045  2016-07-18 09:05:15-07:00 America/Los_Angeles
